# quarre2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  quarre-remote.pro  remote.pro
android/: AndroidManifest.xml  gradle.properties  gradle.properties~  local.properties~
cmake/: android_toolchain.cmake
cpp/: audio.cpp  audio.hpp  audio_hdl.cpp  audio_hdl.hpp  downloadmanager.cpp  downloadmanager.hpp  networkhdl.cpp  networkhdl.h  oshdl.cpp  oshdl.hpp  system.cpp  system.hpp
resources/fonts/: fonts.qrc
resources/images/: images.qrc
resources/qml/: ApplicationStates.qml  ApplicationTransitions.qml  CurrentInteractionView.qml  Gesture.qml  GestureManager.qml  GesturesRoutine.js  HeaderView.qml  InfoView.qml  InteractionManager.qml  Main.qml  MainView.qml  ModuleDefault.qml  ModuleGesture.qml  ModuleIdle.qml  ModuleMicrophoneBlow.qml  ModulePads.qml  ModuleSensorSpatialization.qml  ModuleSliders.qml  ModuleStrings.qml  ModuleTouchBirds.qml  ModuleTouchSpatialization.qml  ModuleTouchTrajectories.qml  ModuleTutorial.qml  ModuleVote.qml  ModuleXRotation.qml  NetworkManager.qml  NextInteractionView.qml  PrefsView.qml  QuarreBird.qml  QuarreGesture.qml  QuarreInfoCurrentSection.qml  QuarreInfoHeader.qml  QuarreInfoHeader.qml.autosave  QuarreInfoNextSection.qml  QuarreInfoNextSection.qml.autosave  QuarreInfoView.qml  QuarreLowerDefault.qml  QuarreModuleGestures.qml  QuarreModulePads.qml  QuarreModuleSensorsPlayground.qml  (+14 more)
resources/qml/engine/: Gesture.qml  GestureManager.qml  InteractionManager.qml  ModuleManager.qml  NetworkManager.qml  SensorManager.qml
(+65 files in other folders)
